[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Webberr"
version = "1.0.0"
description = "Your awesome Webber package"
authors = [
    {name = "C4ZZKIDD", email = "asulica69696@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
